--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0",
     "sass": "^1.77.6",
     "scss": "^0.2.4"
   },
